--- a/swtindex.html
+++ b/swtindex.html
@@ -21,10 +21,17 @@
 <div id="AdWapAskOnlineFloat">
 <mip-shangwutong asid="3002" hide-layer-id="AdWapAskOnlineFloat" ></mip-shangwutong>
 </div>
-
-  <script src="https://mipcache.bdstatic.com/static/mipmain-v1.0.3.js"></script>
+<script src="mip-shangwutong.js"></script>
+  <script src="https://mipcache.bdstatic.com/static/mipmain-v1.0.1.js"></script>
 <script src="https://mipcache.bdstatic.com/static/v1.2/mip-accordion.js"></script>
-<script src="../shangwutong/mip-shangwutong.js"></script>
 
+<div>
+   <div id="shangwutong"></div>
+</div>  
+<mip-shangwutong 
+     ayid="y74002"
+     adtype="ad-dsf"
+     >
+</mip-shangwutong>
 </body>
 </html>
